# rushydro

./: .gitattributes  Cargo.toml  README.md  index.html  manifest.json  rushydro-c0100dff54d63495.js  rushydro-c0100dff54d63495_bg.wasm
.github/workflows/: rust-wasm-deploy.yml  rust-wasm.yml
img-src/: logo.clip
src/: app.rs  main.rs  marching_squares.rs
src/app/: fields.rs  obstacle.rs  particles.rs
